- Prefill last login information (using localStorage)     TODO: Connection Manager - Bower: replaced Ace with my fork - Added Ace editor - Ace: Keyboard Binding - CMD-SHIFT-F to switch to full screen - Ace: Show for html values - Added status pane - Cleanup helper file and Jade template - Title updates in collection view when attr changes

--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "font-awesome": "~4.0",
     "moment": "~2.2.1",
     "nprogress": "~0.1.2",
-    "floatLabel": "https://github.com/m10l/FloatLabel.js.git"
+    "floatLabel": "https://github.com/digitalmaster/FloatLabel.js.git",
+    "ace-builds": "https://github.com/ajaxorg/ace-builds.git"
   }
 }
