--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
   "name": "MongoCMS",
-  "version": "0.0.2",
-  "description": "Manage Mongo content",
+  "version": "0.0.3",
+  "description": "Modern GUI for managing your mongodb content",
   "main": "main.html",
   "private": true,
   "node-remote": "<local>",
+  "no-edit-menu": true,
   "window": {
     "title": "MongoCMS",
     "position": "center",
-    "toolbar": false,
+    "toolbar": true,
     "frame": true,
-    "width": 1200,
+    "width": 1270,
     "height": 800,
     "min_width": 400,
     "min_height": 200
   },
   "dependencies": {
-    "mongodb": "~1.3.23",
-    "mongojs": "~0.10.1"
+    "mongodb": "~1",
+    "mongojs": "~0.13.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-develop": "~0.3.0",
-    "request": "~2.34.0",
+    "grunt": "~0.4.5",
+    "grunt-develop": "~0.4.0",
+    "request": "~2.36.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-sass": "~0.7.3",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-autoprefixer": "~0.7.2",
-    "grunt-groundskeeper": "~0.1.7",
-    "grunt-contrib-jade": "~0.11.0",
-    "grunt-contrib-compass": "~0.7.2"
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-autoprefixer": "~0.8.1",
+    "grunt-groundskeeper": "~0.1.9",
+    "grunt-contrib-jade": "~0.12.0",
+    "grunt-contrib-compass": "~0.9.0"
   }
 }
