--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "window": {
     "title": "MongoCMS",
     "position": "center",
-    "toolbar": true,
+    "toolbar": false,
     "frame": true,
     "width": 1270,
     "height": 800,
@@ -31,6 +31,7 @@
     "grunt-autoprefixer": "~0.8.1",
     "grunt-groundskeeper": "~0.1.9",
     "grunt-contrib-jade": "~0.12.0",
-    "grunt-contrib-compass": "~0.9.0"
+    "grunt-contrib-compass": "~0.9.0",
+    "grunt-node-webkit-builder": "~0.1.21"
   }
 }
