--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "no-edit-menu": true,
   "author": "Jose Browne <josebrowne@gmail.com>",
   "manifestUrl": "http://localhost:3000/package.json",
+  "chromium-args": "--allow-file-access-from-files",
   "packages": {
     "mac": "http://localhost:3000/builds/releases/updapp/mac/updapp.dmg",
     "win": "http://localhost:3000/builds/releases/updapp/win/updapp.zip",
@@ -26,22 +27,24 @@
   },
   "dependencies": {
     "mongodb": "~1",
-    "mongojs": "~0.13.1"
+    "mongojs": "~0.14.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-develop": "~0.4.0",
-    "request": "~2.39.0",
+    "request": "~2.40.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-sass": "~0.7.3",
+    "grunt-contrib-sass": "~0.8.1",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-uglify": "~0.5.1",
-    "grunt-autoprefixer": "~0.8.2",
+    "grunt-autoprefixer": "~1.0.1",
     "grunt-contrib-jade": "~0.12.0",
-    "grunt-contrib-compass": "~0.9.0",
-    "grunt-node-webkit-builder": "~0.1.21",
-    "grunt-contrib-compress": "~0.10.0",
+    "grunt-contrib-compass": "~0.9.1",
+    "grunt-node-webkit-builder": "~0.2.2",
+    "grunt-contrib-compress": "~0.11.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-clean": "~0.6.0"
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-browserify": "~2.1.4",
+    "browserify": "~5.10.1"
   }
 }
