--- a/package.json
+++ b/package.json
@@ -1,50 +1,53 @@
 {
-  "name": "MongoCMS",
-  "version": "0.0.3",
-  "description": "Modern GUI for managing your mongodb content",
-  "main": "main.html",
-  "private": true,
-  "node-remote": "<local>",
-  "no-edit-menu": true,
-  "author": "Jose Browne <josebrowne@gmail.com>",
-  "manifestUrl": "http://localhost:3000/package.json",
-  "chromium-args": "--allow-file-access-from-files",
-  "packages": {
-    "mac": "http://localhost:3000/builds/releases/updapp/mac/updapp.dmg",
-    "win": "http://localhost:3000/builds/releases/updapp/win/updapp.zip",
-    "linux32": "http://localhost:3000/builds/releases/updapp/linux32/updapp.tar.gz"
-  },
-  "window": {
-    "title": "MongoCMS",
-    "position": "center",
-    "toolbar": true,
-    "frame": true,
-    "width": 1270,
-    "height": 800,
-    "min_width": 400,
-    "min_height": 200,
-    "icon": "./icons/mcms.png"
-  },
-  "dependencies": {
-    "mongodb": "~1",
-    "mongojs": "~0.14.0"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-develop": "~0.4.0",
-    "request": "~2.40.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-uglify": "~0.5.1",
-    "grunt-autoprefixer": "~1.0.1",
-    "grunt-contrib-jade": "~0.12.0",
-    "grunt-contrib-compass": "~0.9.1",
-    "grunt-node-webkit-builder": "~0.2.2",
-    "grunt-contrib-compress": "~0.11.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-browserify": "~2.1.4",
-    "browserify": "~5.10.1"
-  }
+    "name": "MongoCMS",
+    "version": "0.0.3",
+    "description": "Modern GUI for managing your mongodb content",
+    "main": "main.html",
+    "private": true,
+    "node-remote": "<local>",
+    "no-edit-menu": true,
+    "author": "Jose Browne <josebrowne@gmail.com>",
+    "manifestUrl": "http://localhost:8080/package.json",
+    "packages": {
+        "mac": {
+            "url": "http://localhost:8080/latest//mac/mongocms.zip"
+        },
+        "win": {
+            "url": "http://localhost:8080/latest//win/mongocms.zip"
+        }
+    },
+    "window": {
+        "title": "MongoCMS",
+        "position": "center",
+        "toolbar": true,
+        "frame": true,
+        "width": 1270,
+        "height": 800,
+        "min_width": 400,
+        "min_height": 200,
+        "icon": "./icons/mcms.png"
+    },
+    "dependencies": {
+        "mongodb": "~1",
+        "mongojs": "~0.14.0",
+        "node-webkit-updater": "~0.1.0"
+    },
+    "devDependencies": {
+        "grunt": "~0.4.5",
+        "grunt-develop": "~0.4.0",
+        "request": "~2.40.0",
+        "grunt-contrib-watch": "~0.6.1",
+        "grunt-contrib-sass": "~0.8.1",
+        "grunt-contrib-concat": "~0.5.0",
+        "grunt-contrib-uglify": "~0.5.1",
+        "grunt-autoprefixer": "~1.0.1",
+        "grunt-contrib-jade": "~0.12.0",
+        "grunt-contrib-compass": "~0.9.1",
+        "grunt-node-webkit-builder": "~0.2.2",
+        "grunt-contrib-compress": "~0.11.0",
+        "grunt-contrib-copy": "~0.5.0",
+        "grunt-contrib-clean": "~0.6.0",
+        "grunt-browserify": "~2.1.4",
+        "browserify": "~5.10.1"
+    },
 }
